Added Dto to Invoice